--- a/conf/machine/t600.conf
+++ b/conf/machine/t600.conf
@@ -1,8 +1,8 @@
 #@TYPE: Machine
 #@DESCRIPTION: Machine configuration for running T600 in 64-bit mode
 
-require ../../../meta-fsl-ppc/conf/machine/e6500-64b.inc
-require ../../../meta/conf/machine/include/soc-family.inc
+require conf/machine/e6500-64b.inc
+require conf/machine/include/soc-family.inc
 
 SOC_FAMILY = "t2080"
 # TODO: fix 32bit build of u-boot
