--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script:
     - . ./poky/fss2-init-build-env -m t600
     - echo 'BB_DISKMON_DIRS = ""' >> conf/local.conf
     - echo 'INHERIT += "rm_work"' >> conf/local.conf
-    - bitbake u-boot-mkimage-native
+    - travis_wait 30 bitbake virtual/kernel
 env:
     global:
         - MANIFEST_RELEASE="master"
