--- a/conf/machine/t600.conf
+++ b/conf/machine/t600.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@DESCRIPTION: Machine configuration for running T600 in 64-bit mode
 
-require conf/machine/e6500-64b.inc
+require conf/machine/e6500.inc
 require conf/machine/include/soc-family.inc
 
 SOC_FAMILY = "t2080"
@@ -16,4 +16,4 @@ SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1 115200;ttyEHV0"
 SERIAL_CONSOLES_CHECK = "${SERIAL_CONSOLES}"
 USE_VT = "0"
 
-BASELIB_powerpc64 = "lib"
+BUILD_64BIT_KERNEL = "1"
