--- a/conf/machine/t600.conf
+++ b/conf/machine/t600.conf
@@ -6,7 +6,7 @@ require conf/machine/include/soc-family.inc
 
 SOC_FAMILY = "t2080"
 # TODO: fix 32bit build of u-boot
-UBOOT_MACHINES ?= "T2080QDS T2080QDS_SDCARD T2080QDS_SPIFLASH T2080QDS_NAND T2080QDS_SRIO_PCIE_BOOT"
+#UBOOT_MACHINES ?= "T2080QDS T2080QDS_SDCARD T2080QDS_SPIFLASH T2080QDS_NAND T2080QDS_SRIO_PCIE_BOOT"
 KERNEL_DEVICETREE ?= "t2080qds.dtb t2080qds-usdpaa.dtb"
 #KERNEL_DEFCONFIG ?= "${S}/arch/powerpc/configs/85xx/e6500rev2_defconfig"
 
