Change to FSL SDK 1.7 kernel and add Accton patches

--- a/conf/machine/t600.conf
+++ b/conf/machine/t600.conf
@@ -6,8 +6,8 @@ require conf/machine/include/soc-family.inc
 
 SOC_FAMILY = "t2080"
 # TODO: fix 32bit build of u-boot
-#UBOOT_MACHINES ?= "T2080QDS T2080QDS_SDCARD T2080QDS_SPIFLASH T2080QDS_NAND T2080QDS_SRIO_PCIE_BOOT"
-KERNEL_DEVICETREE ?= "t2080qds.dtb t2080qds-usdpaa.dtb"
+UBOOT_MACHINES ?= "T2080RDB"
+KERNEL_DEVICETREE ?= "t2080rdb.dtb t2080rdb-usdpaa.dtb"
 #KERNEL_DEFCONFIG ?= "${S}/arch/powerpc/configs/85xx/e6500rev2_defconfig"
 
 JFFS2_ERASEBLOCK = "0x10000"
