--- a/conf/machine/t600.conf
+++ b/conf/machine/t600.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
 #@DESCRIPTION: Machine configuration for running T600 in 64-bit mode
 
-require conf/machine/e6500.inc
+require conf/machine/include/e6500.inc
 require conf/machine/include/soc-family.inc
 
 SOC_FAMILY = "t2080"
